# TungstenChess

./: .clang-format  .gitignore  CMakeLists.txt  ClassDiagram.uxf  Info.plist  LICENSE  README.md
.devcontainer/: devcontainer.json
include/: GUI.hpp  bitboard.hpp  board.hpp  bot.hpp  magic.hpp  move.hpp  move_gen_helpers.hpp  opening_book.hpp  piece_eval_tables.hpp  transposition_table.hpp  types.hpp  utils.hpp  zobrist.hpp
include/bot/: engine.hpp  opening_book.hpp  piece_eval_tables.hpp  transposition_table.hpp
include/core/: bitboard.hpp  board.hpp  magic.hpp  move.hpp  moves_lookup.hpp  zobrist.hpp
include/core/moves_lookup/: lookup.hpp  magic.hpp
include/utils/: types.hpp  utils.hpp
resources/: icon.icns  opening_book  opening_book.txt
src/: GUI.cpp  GUI.hpp  UCI.cpp  UCI.main.cpp  bitboard.cpp  board.cpp  bot.cpp  main.cpp  move.cpp  move_gen_helpers.cpp  openings.cpp  piece.cpp  piece_eval_tables.cpp  transposition_table.cpp  zobrist.cpp
src/Core/: main.cpp
src/Core/Board/: board.cpp
src/Core/GUI/: GUI.cpp
src/Core/Helpers/: bitboard.cpp  move.cpp  openings.cpp  piece.cpp  transposition_table.cpp  zobrist.cpp
src/GUI/: GUI.cpp  GUI.hpp  main.cpp
src/Headers/: GUI.hpp  bitboard.hpp  board.hpp  bot.hpp  images.hpp  magic.hpp  move.hpp  move_gen_helpers.hpp  opening_book.hpp  openings.hpp  piece.hpp  piece_eval_tables.hpp  transposition_table.hpp  types.hpp  zobrist.hpp
src/Headers/Data/: images.hpp  move_gen_helpers.hpp  opening_book.hpp  piece_eval_tables.hpp
src/bot/: opening_book.cpp  transposition_table.cpp
src/bot/engine/: core.cpp  evaluation.cpp  search.cpp
src/core/: bitboard.cpp  magic.cpp  move.cpp  moves_lookup.cpp  zobrist.cpp
src/core/board/: core.cpp  movegen.cpp  mutation.cpp
src/core/moves_lookup/: lookup.cpp  magic.cpp
